logs/pylirious.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MeshLabXML-2017.9.egg-info'...
Listing './lib/python3.5/site-packages/meshlabxml'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylirious'...
Listing './lib/python3.5/site-packages/pylirious/mm-api'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/csharp_vsproj_files'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/csharp_vsproj_files_unity'...
Compiling './lib/python3.5/site-packages/pylirious/mm-api/build/mmRemote.py'...
***   File "./lib/python3.5/site-packages/pylirious/mm-api/build/mmRemote.py", line 34
    print "[mmRemote::runCommand] sending..."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/clisp'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/csharp'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/go'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/java'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/lua'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/octave'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/perl5'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/python'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/r'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/ruby'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/std'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/tcl'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/typemaps'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/uffi'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/build/swigwin/Lib/xml'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/cpp'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/cpp/PackedMeshDemo'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/csharp'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/csharp/CommandDemos'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/csharp/CommandDemos/Properties'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/csharp/LinkedMeshDemo'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/csharp/LinkedMeshDemo/Properties'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/csharp/LinkedMeshDemo/sharpgl'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/csharp/mm'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/csharp/mm/Properties'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/cpp'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/csharp_win'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/csharp_win/Debug'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/csharp_win/Release'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/csharp_win_unity'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/csharp_win_unity/Debug'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/csharp_win_unity/Release'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/documentation'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/documentation/python_html'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/documentation/python_html/_modules'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/documentation/python_html/_modules/mm'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/documentation/python_html/_sources'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/documentation/python_html/_static'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/python'...
Compiling './lib/python3.5/site-packages/pylirious/mm-api/distrib/python/mmRemote.py'...
***   File "./lib/python3.5/site-packages/pylirious/mm-api/distrib/python/mmRemote.py", line 34
    print "[mmRemote::runCommand] sending..."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pylirious/mm-api/distrib/python_osx'...
Compiling './lib/python3.5/site-packages/pylirious/mm-api/distrib/python_osx/mmRemote.py'...
***   File "./lib/python3.5/site-packages/pylirious/mm-api/distrib/python_osx/mmRemote.py", line 34
    print "[mmRemote::runCommand] sending..."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pylirious/mm-api/python'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/python/doc'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/python/doc/generated_text'...
Listing './lib/python3.5/site-packages/pylirious/mm-api/python/examples'...
Compiling './lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_02_spatialtests.py'...
***   File "./lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_02_spatialtests.py", line 18
    print "scene bbox min: ", fMin
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_04_scene.py'...
***   File "./lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_04_scene.py", line 16
    print "There are " + str(len(objects)) + " objects in the scene\n"
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_05_selection.py'...
***   File "./lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_05_selection.py", line 15
    print "selected objects: ", selected_objects
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_08_transform_obj.py'...
***   File "./lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_08_transform_obj.py", line 25
    print "this script requires an active Face Selection"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_09_connector.py'...
***   File "./lib/python3.5/site-packages/pylirious/mm-api/python/examples/demo_09_connector.py", line 44
    print "script is: "
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pylirious/mm-api/python/mm'...
Listing './lib/python3.5/site-packages/pylirious-20170311.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
